<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".Faq1">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="395dp"
        android:layout_height="72dp"
        android:background="#6200ee"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="Frequently Asked Questions"
        app:titleTextColor="@color/white" />






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- FAQ Item 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1. What is Sajag App?"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:paddingBottom="8dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sajagapp"
                    android:textSize="16sp"/>
            </LinearLayout>


            <!-- Add more FAQ items similarly -->
            <!-- FAQ Item 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:textColor="@color/black"
                    android:text="2.Who can use Sajag App?"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- FAQ Item 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="3.What does Marg Darshika offer?"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/margdarshika"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- FAQ Item 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="4.Do I need an internet connection to use Sajag App?"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/internet"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- FAQ Item 5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="5.How do I view reported disasters on Sajag App?"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viewreport"
                    android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
